# embedded-camera-calibration

./: .gitignore  Cargo.toml  README.md
src/: calibration_evaluator.rs  calibrator.rs  camera.rs  camera_mesh.rs  content_projection.rs  debug_viz.rs  external_calibrator.rs  external_camera.rs  lib.rs  patterns.rs  projection.rs  types.rs
